--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,6 @@
 pipeline{
     agent any
-      stages{
+/*      stages{
           stage("Start instances"){
               steps
                 {  withCredentials([[
@@ -17,7 +17,14 @@ pipeline{
               steps{
         sh 'aws ec2 stop-instances --instance-ids $InstanceId'
         }
-     }
+  
+   }
+*/
+  stage("create a bucket")  {
+       steps {
+    bat  'aws s3 mb s3://rahul.singh'
      
-      }
+        }
+}
+
 }
