--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,6 @@
 pipeline{
     agent any
-/*      stages{
+      stages{
           stage("Start instances"){
               steps
                 {  withCredentials([[
@@ -8,7 +8,7 @@ pipeline{
                        credentialsId: 'aws-keys',
                      accessKeyVariable: 'AWS_ACCESS_KEY_ID',
                       secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]){ 
-                      sh 'aws ec2 start-instances --instance-ids $InstanceId'
+   /*                   sh 'aws ec2 start-instances --instance-ids $InstanceId'
                     }
               }
 }
