made one change to repo

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,10 +8,11 @@ pipeline{
                        credentialsId: 'aws-keys',
                      accessKeyVariable: 'AWS_ACCESS_KEY_ID',
                       secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]){ 
-   /*                   sh 'aws ec2 start-instances --instance-ids $InstanceId'
+                      sh 'aws ec2 start-instances --instance-ids $InstanceId'
                     }
               }
 }
+      
            
        stage("Stop instances"){
               steps{
@@ -19,12 +20,6 @@ pipeline{
         }
   
    }
-*/
-  stage("create a bucket")  {
-       steps {
-    bat  'aws s3 mb s3://rahul.singh'
-     
-        }
-}
+
 
 }
