--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,12 +16,12 @@ pipeline{
 
               }
            
-       stage("Stop instances"){
+       /*stage("Stop instances"){
               steps{
         sh 'aws ec2 stop-instances --instance-ids $InstanceId'
         }
   
    }
-
+*/
 
 }
