made changes to JenkinsFile

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,12 @@
 pipeline{
     agent any
       stages{
+         stage ('SCM checkout')
+       {
+     steps {
+      sh 'git clone https://github.com/saurabhgore-code/aws-jenkins.git'
+  }
+    }
           stage("Start instances"){
               steps
                 {  withCredentials([[
