--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline{
          stage ('SCM checkout')
        {
      steps {
-      sh 'git clone https://github.com/saurabhgore-code/aws-ec2-stop-start.git'
+      sh 'git clone https://github.com/saurabhgore-code/aws-ec2-jenkins.git'
   }
     }
           stage("Start instances"){
@@ -14,7 +14,7 @@ pipeline{
                        credentialsId: 'aws-keys',
                      accessKeyVariable: 'AWS_ACCESS_KEY_ID',
                       secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]){ 
-                  sh 'aws ec2 start-instances --instance-ids $InstanceId'
+                  sh 'aws ec2 start-instances --instance-ids $Instance --region=us-east-1'
                     }
               }
 }
@@ -22,12 +22,12 @@ pipeline{
 
               }
            
-       /*stage("Stop instances"){
+       stage("Stop instances"){
               steps{
-        sh 'aws ec2 stop-instances --instance-ids $InstanceId'
+        sh 'aws ec2 stop-instances --instance-ids $InstanceId --region=us-east-1'
         }
   
    }
-*/
+
 
 }
