--- a/JenkinsFile
+++ b/JenkinsFile
@@ -28,6 +28,11 @@ pipeline{
         }
   
    }
+      stage("create s3 bucket"){
+               steps{
+               sh 'aws s3 mb s3://sunil.saxena'
+              }
+         }
       }
 
 }
